--- a/InputOutput.ipynb
+++ b/InputOutput.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNGpz6R1UAuP/7r0koH5ywz",
+      "authorship_tag": "ABX9TyOuZW2jOucY4WXmh3fBhsDz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Q1: Write a program to display the following texts\n",
+        "**Q1**: Write a program to display the following texts\n",
         "\n",
         "```\n",
         "Hello Alice.\n",
@@ -48,14 +48,12 @@
         "id": "8MT5wiNAO81d"
       },
       "outputs": [],
-      "source": [
-        "\n"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Q2: Fill in the code below so that the program print out 12"
+        "**Q2**: Fill in the code below so that the program print out 12"
       ],
       "metadata": {
         "id": "Wb8pt2vURBxO"
@@ -77,10 +75,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Q3: What will the following code print out?\n",
+        "**Q3**: What will the following code print out?\n",
         "\n",
         "```\n",
         "x = 5\n",
+        "x + 1\n",
         "y = 7\n",
         "x = x + 1\n",
         "y = y + x\n",
@@ -105,7 +104,79 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Q4: Temperature Convertor\n",
+        "**Q4**: Fill in the blanks (`__`) with mathematic operators so that the program print out\n",
+        "\n",
+        "```\n",
+        "0 1 4 100\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "cdKhCS76MKLZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"{6 __ 2} {7 __ 2} {9 __ 2} {10 __ 2}\")"
+      ],
+      "metadata": {
+        "id": "ucgJIOTOMZhv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q5**: Fill in the blank to ask the user for their name and print it out as shown below.\n",
+        "\n",
+        "```\n",
+        "Enter your name: Alice\n",
+        "Hello Alice!\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "s2q48kdmNNIZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name = ____________________\n",
+        "print(f\"Hello {name}!\")"
+      ],
+      "metadata": {
+        "id": "Sa7hx2o9Ndya"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q6**: One of the lines below causes syntax error. Fix it."
+      ],
+      "metadata": {
+        "id": "XMzjYfiCNk8Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = int(input(\"Enter n:\"))\n",
+        "a * 5 = a\n",
+        "print(f\"a = {a:.5f}\")"
+      ],
+      "metadata": {
+        "id": "4mTGmPcwOEGJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q7**: Temperature Convertor\n",
         "\n",
         "Write a program that takes in a temperature in Fahrenheit (F) from the user and convert it into Celsius (C) and print it out.\n",
         "\n",
@@ -145,7 +216,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Q5: Cashier Program\n",
+        "**Q8**: Cashier Program\n",
         "\n",
         "Write a cashier program to calculate the total payment. There are 4 items: cookie (5 baht), water (10 baht), soda (20 baht), and popcorn (30).\n",
         "\n",
@@ -177,12 +248,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
+      "source": [],
       "metadata": {
         "id": "DkNs29e8TqpU"
       },
