--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZvDm7PK7V8r3ktmmWT+Dr",
+      "authorship_tag": "ABX9TyMu/N6Eyao+af6gQJe78Sh0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,131 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q1**: Fill in the blanks with math operators so that the statement below print out the following:\n",
+        "**Q1**: Fix the error of the following code. When the user enters 10, the program should print out 50 51"
+      ],
+      "metadata": {
+        "id": "MuFI3u4PoX3W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = input('Enter x:')\n",
+        "x *= 5\n",
+        "print(x, x+1)"
+      ],
+      "metadata": {
+        "id": "ggVq19jzoYEm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q2**: Fill in the blank so the the program prints out 'Yes', when the user input the number between 12 and 18."
+      ],
+      "metadata": {
+        "id": "jPy4hVOgRmb-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input('Enter a number: '))\n",
+        "if __________________________________: #fill in your code here\n",
+        "  print('Yes')\n",
+        "else:\n",
+        "  print('No')"
+      ],
+      "metadata": {
+        "id": "yQKNvBKuRxPz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q3**: Fill in the blank so that the program print out as shown below.\n",
+        "\n",
+        "```\n",
+        "Hello\n",
+        "Hello\n",
+        "Hello\n",
+        "Hello\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "9iU_7xnlSCv8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(_):\n",
+        "  print(\"Hello\")"
+      ],
+      "metadata": {
+        "id": "pQ9bfcR2SCfX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q4**: Fill in the blank so that the program print out `12`"
+      ],
+      "metadata": {
+        "id": "63LjI-qVSbo5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "total = 0\n",
+        "count = 1\n",
+        "while count < 5:\n",
+        "  total += __   # Here\n",
+        "  count += 1\n",
+        "print(total)"
+      ],
+      "metadata": {
+        "id": "gH2fulvcSdpA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q5**: Fill in the blank so that the program print out `5`"
+      ],
+      "metadata": {
+        "id": "v0P_fN8vTMka"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1, 2, 3, 4, 5, 4, 3, 2, 1]\n",
+        "count = 0\n",
+        "for num in numbers:\n",
+        "  if ______________________:\n",
+        "    count += 1\n",
+        "print(count)"
+      ],
+      "metadata": {
+        "id": "0FDypKOnTMye"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q6**: Fill in the blanks with math operators so that the statement below print out the following:\n",
         "\n",
         "```\n",
         "1 2 2.5 25\n",
@@ -53,7 +177,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q2**: Fill in the blank so that the program print out 4 2 0 -2 -4"
+        "**Q7**: Fill in the blank so that the program print out 4 2 0 -2 -4"
       ],
       "metadata": {
         "id": "GbIeR5fboXEI"
@@ -74,7 +198,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q3**: Fill a number in the blank so that the following program print out 'D'"
+        "**Q8**: Fill a number in the blank so that the following program print out 'D'"
       ],
       "metadata": {
         "id": "2KBjqmjtoXf7"
@@ -103,29 +227,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q4**: Fix the error of the following code. When the user enters 10, the program should print out 50 51"
-      ],
-      "metadata": {
-        "id": "MuFI3u4PoX3W"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "x = input('Enter x:')\n",
-        "x *= 5\n",
-        "print(x, x+1)"
-      ],
-      "metadata": {
-        "id": "ggVq19jzoYEm"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Q5**: Date formatting\n",
+        "**Q9**: Date formatting\n",
         "\n",
         "Write a program to receive day, month, year, and the date format ('US', 'JP', 'TH') from the user and then print out the date in that format.\n",
         "\n",
@@ -168,7 +270,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "id": "tGPr8AYyoaag"
       },
@@ -178,7 +283,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q6**: Let's make milk puddings\n",
+        "**Q10**: Let's make milk puddings\n",
         "\n",
         "Let's buy some more eggs and milk to make some milk puddings!\n",
         "To make one BIG pudding, it requires 10 eggs and 3 bottles of milk. The inputs will be the price of egg and the price of milk and the number of pudding we want to make. As usual, you will get some discount if you buy a lot of eggs and milks as follow.\n",
@@ -231,7 +336,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "id": "VL-lZAcdojrc"
       },
@@ -241,7 +349,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q7**: Printing up traingle\n",
+        "**Q11**: Printing up traingle\n",
         "\n",
         "Write a program that takes in an interger number from a user and then print out a traingle shown below.\n",
         "\n",
@@ -274,7 +382,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "\n"
+      ],
       "metadata": {
         "id": "4zsBV9dWolPw"
       },
@@ -284,7 +395,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q8**: Printing outer traingle\n",
+        "**Q12**: Printing outer traingle\n",
         "\n",
         "Write a program that takes in an interger number from a user and then print out an outer traingle shown below.\n",
         "\n",
@@ -326,7 +437,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q9**: Nim Game\n",
+        "**Q13**: Nim Game (2 points)\n",
         "\n",
         "Write a program to create a Nim game. In this game, there are two players. Each player takes turn to count the number down by 1 or 2. Who count to zero first lose. The starting amount is 10.\n",
         "\n",
@@ -355,7 +466,8 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
+        "remaining = 10\n",
+        "turn = 1\n",
         "\n"
       ],
       "metadata": {
