--- a/Lab_2.ipynb
+++ b/Lab_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTfi7MZ4XmRUB/MJYwWvKD",
+      "authorship_tag": "ABX9TyNVTdZCGCb19Jgootq9rxG6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,7 +99,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q4**: Fill in the blank below so that the program print out `123`"
+        "**Q4**: Fill in the blank below so that the program prints out `123`"
       ],
       "metadata": {
         "id": "afwjhiazRIM5"
@@ -121,7 +121,63 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q5**: Circle's properties\n",
+        "**Q5**: Fill in the blank so that the program prints out `5`"
+      ],
+      "metadata": {
+        "id": "iXCsLOXOapBO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_list = [[1,2,3],[4,5,6]]\n",
+        "print(my_list[0][_] + my_list[_][0])"
+      ],
+      "metadata": {
+        "id": "1-XKcJHWas6q"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q6**: Fill in the blank so that the program output as shown below.\n",
+        "\n",
+        "Example of output:\n",
+        "```\n",
+        "Which is your favorite bridge? Baltimore\n",
+        "When was it constructed? 1972\n",
+        "My favorite bridge is 'Baltimore' and it was constructed in '1972'.\n",
+        "```\n"
+      ],
+      "metadata": {
+        "id": "bIygF1GqarVW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def multiple_items():\n",
+        "  bridge = input(\"Which is your favorite bridge? \")\n",
+        "  year = input(\"When was it constructed? \")\n",
+        "  return bridge, year\n",
+        "\n",
+        "def main():\n",
+        "  __________________________________________\n",
+        "  print(f\"My favorite bridge is '{brg}' and it was constructed in '{yr}'.\")\n",
+        "main()"
+      ],
+      "metadata": {
+        "id": "CULqbRwXatLj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q7**: Circle's properties\n",
         "\n",
         "Implement a function called `circle_properties(radius)` that takes the radius of a circle as input and returns the area and circumference of the circle.\n",
         "\n",
@@ -177,65 +233,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q6**: Number of Good Pairs\n",
-        "\n",
-        "Given a list of integers nums, return the number of good pairs.\n",
-        "\n",
-        "A pair $\\texttt{(i, j)}$ is called good if $\\texttt{nums[i] == nums[j] and i < j}$.\n",
-        "\n",
-        "\n",
-        "Examples:\n",
-        "\n",
-        "Ex1:\n",
-        "```\n",
-        "Function call: good_pairs([1,2,3,1,1,3])\n",
-        "Return: 4\n",
-        "```\n",
-        "Explanation: There are 4 good pairs (0,3), (0,4), (3,4), (2,5) 0-indexed.\n",
-        "\n",
-        "Ex2:\n",
-        "```\n",
-        "Function call: good_pairs([1,1,1,1])\n",
-        "Return: 6\n",
-        "```\n",
-        "Explanation: Each pair in the array are good.\n",
-        "\n",
-        "Ex3:\n",
-        "```\n",
-        "Function call: good_pairs([1,2,3])\n",
-        "Return: 0\n",
-        "```"
-      ],
-      "metadata": {
-        "id": "GEyX6k40HHJE"
-      }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "sqeLwDw9GdZ2"
-      },
-      "outputs": [],
-      "source": [
-        "def good_pairs(nums):\n",
-        "  # Fill in your code here\n",
-        "\n",
-        "  return\n",
-        "\n",
-        "def main():\n",
-        "  ## Test cases below ##\n",
-        "  good_pairs([1,2,3,1,1,3]) # == 4\n",
-        "  good_pairs([1,1,1,1])     # == 6\n",
-        "  good_pairs([1,2,3])       # == 0\n",
-        "  good_pairs([1,2,3,3,2,1]) # == 3\n",
-        "  good_pairs([1])           # == 0"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Q7**: Count Vowel\n",
+        "**Q8**: Count Vowel\n",
         "\n",
         "Write a program to count the numbers of vowels (a, e, i, o, u) in a sentence.\n",
         "\n",
@@ -281,69 +279,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q8**: Gacha Simulation\n",
-        "\n",
-        "In this problem, you will write a program to simulate pulling a gacha banner. A user will input the number pulls, the probability of getting a specific character in the banner, and the number of time he/she wants to repeat the simulation (you can think of it as the number of people who will attempt this). You will output a list $\\texttt{outcomes}$ of length 10, where $\\texttt{outcomes[i]}$ corresponds to the number of simulations that the person that gets the character $i$ times.\n",
-        "\n",
-        "Example:\n",
-        "* Assume the first simulation's outcome is 1, the second one is 1, the third one is 0, the fourth out is 2, the fifth one is 3, and the sixth one is 1. Therefore, the total outcome of 0 is one, 1 is three, 2 is one, and 3 is one. The outcome = [1, 3, 1, 1, 0, 0, 0 ,0 ,0, 0].\n",
-        "\n",
-        "Input:\n",
-        "* An integer $\\texttt{n}$. the number pulls.\n",
-        "* A real number $\\texttt{p}$. the probability of getting a specific character.\n",
-        "* An integer $\\texttt{m}$. the number of simulation.\n",
-        "* An integer $\\texttt{seed}$. Seed number.\n",
-        "\n",
-        "Output:\n",
-        "* A $\\texttt{outcome}$ list of length 10.\n",
-        "\n",
-        "Pseudocode:\n",
-        "* First, you implement a $\\texttt{simulation}$ function, which takes in two numbers, the number of pulls and the probability, and returns the number of characters that you get.\n",
-        "  * To deterimine whether or not you get a character, use the following logic, $\\texttt{random.random() < p}$.\n",
-        "  * Create a loop to call $\\texttt{random.random() n}$ times.\n",
-        "* Then, you implement a $\\texttt{main}$ function to receive inputs from the user.\n",
-        "  * Create a loop to call $\\texttt{simulation}$ functions $m$ times\n",
-        "  *   Let $\\texttt{count}$ be an outcome of one simulation. You can update the $\\texttt{outcome}$ list as follows: $\\texttt{outcome[count] += 1}.$ Make sure you understand this logic.\n",
-        "\n",
-        "Example1 :\n",
-        "\n",
-        "```\n",
-        "Enter the number of pull: 200\n",
-        "Enter the probability: 0.005\n",
-        "Enter the number of simulation: 10\n",
-        "Enter the seed number: 777\n",
-        "Outcomes = [3, 4, 2, 1, 0, 0, 0, 0, 0, 0]\n",
-        "```\n",
-        "\n",
-        "Exaple 2:\n",
-        "\n",
-        "```\n",
-        "Enter the number of pull: 90\n",
-        "Enter the probability: 0.016\n",
-        "Enter the number of simulation: 100\n",
-        "Enter the seed number: 77\n",
-        "Outcomes = [22, 36, 29, 10, 3, 0, 0, 0, 0, 0]\n",
-        "```"
-      ],
-      "metadata": {
-        "id": "S3OJV6khJ6gm"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n"
-      ],
-      "metadata": {
-        "id": "GyIiZNeuJ6JS"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Q9**: Adding two vectors\n",
+        "**Q9**: Adding two vectors (2 points)\n",
         "\n",
         "Write a program to add two vectors of size $n$ together.\n",
         "\n",
@@ -396,7 +332,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q10**: Standard Deviation\n",
+        "**Q10**: Standard Deviation (2 points)\n",
         "\n",
         "Write a program to calculate a standard deviation of a given data.\n",
         "\n",
@@ -465,6 +401,64 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q11**: Number of Good Pairs\n",
+        "\n",
+        "Given a list of integers nums, return the number of good pairs.\n",
+        "\n",
+        "A pair $\\texttt{(i, j)}$ is called good if $\\texttt{nums[i] == nums[j] and i < j}$.\n",
+        "\n",
+        "\n",
+        "Examples:\n",
+        "\n",
+        "Ex1:\n",
+        "```\n",
+        "Function call: good_pairs([1,2,3,1,1,3])\n",
+        "Return: 4\n",
+        "```\n",
+        "Explanation: There are 4 good pairs (0,3), (0,4), (3,4), (2,5) 0-indexed.\n",
+        "\n",
+        "Ex2:\n",
+        "```\n",
+        "Function call: good_pairs([1,1,1,1])\n",
+        "Return: 6\n",
+        "```\n",
+        "Explanation: Each pair in the array are good.\n",
+        "\n",
+        "Ex3:\n",
+        "```\n",
+        "Function call: good_pairs([1,2,3])\n",
+        "Return: 0\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "GEyX6k40HHJE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "sqeLwDw9GdZ2"
+      },
+      "outputs": [],
+      "source": [
+        "def good_pairs(nums):\n",
+        "  # Fill in your code here\n",
+        "\n",
+        "  return\n",
+        "\n",
+        "def main():\n",
+        "  ## Test cases below ##\n",
+        "  good_pairs([1,2,3,1,1,3]) # == 4\n",
+        "  good_pairs([1,1,1,1])     # == 6\n",
+        "  good_pairs([1,2,3])       # == 0\n",
+        "  good_pairs([1,2,3,3,2,1]) # == 3\n",
+        "  good_pairs([1])           # == 0"
+      ]
     }
   ]
 }
