--- a/Lab_2.ipynb
+++ b/Lab_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVTdZCGCb19Jgootq9rxG6",
+      "authorship_tag": "ABX9TyMVmytZr1Dc/GHlfd0ytEqc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,9 +146,8 @@
         "\n",
         "Example of output:\n",
         "```\n",
-        "Which is your favorite bridge? Baltimore\n",
-        "When was it constructed? 1972\n",
-        "My favorite bridge is 'Baltimore' and it was constructed in '1972'.\n",
+        "Enter a sequence of numbers: 1 2 3 4 5 6\n",
+        "[1, 2, 3, 4, 5, 6]\n",
         "```\n"
       ],
       "metadata": {
@@ -158,14 +157,17 @@
     {
       "cell_type": "code",
       "source": [
-        "def multiple_items():\n",
-        "  bridge = input(\"Which is your favorite bridge? \")\n",
-        "  year = input(\"When was it constructed? \")\n",
-        "  return bridge, year\n",
+        "# A function to convert a string to a list of integers\n",
+        "def string_to_list_num(string, splitter=' '):\n",
+        "  list_seq = string.split(splitter)\n",
+        "  for i in range(len(list_seq)):\n",
+        "    list_seq[i] = int(list_seq[i])\n",
+        "  return list_seq\n",
         "\n",
         "def main():\n",
-        "  __________________________________________\n",
-        "  print(f\"My favorite bridge is '{brg}' and it was constructed in '{yr}'.\")\n",
+        "  sequence = input(\"Enter a sequence of numbers: \")\n",
+        "  ________________________________________\n",
+        "  print(sequence)\n",
         "main()"
       ],
       "metadata": {
