--- a/Condition_Exercise.ipynb
+++ b/Condition_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP/81LZdhtPzuWEgnP4ZKAH",
+      "authorship_tag": "ABX9TyNoMJUpP6qlPJN+H8IBwKnU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q3**: Fill in the code below with a boolean operator so that the program will output False."
+        "**Q3**: Fill in the code (`_`) below with a boolean operator so that the program will output False."
       ],
       "metadata": {
         "id": "5IM7GgeDvqck"
@@ -92,7 +92,7 @@
       "source": [
         "x = 20\n",
         "y = 30\n",
-        "truth_value = (x != y) _ (x == y)\n",
+        "truth_value = (x != y) _ (x == y) # Here\n",
         "print(truth_value)"
       ],
       "metadata": {
@@ -136,6 +136,8 @@
         "Write a program that receives an input from the user.\n",
         "\n",
         "Print out 'Even' if the input is an even number and print out 'Odd' if the input is an odd number.\n",
+        "\n",
+        "Hint: Use can use `%` to determine even or odd.\n",
         "\n",
         "Example 1:\n",
         "```\n",
@@ -219,8 +221,8 @@
         "\n",
         "Write a program that takes in the number of products that a customer buys. <br> There are three products: donut, cupcake, and popcorn. <br> The price of donut is 10 baht each; the price of cupcake is 20 baht each; and the price of popcorn is 40 baht each. <br> Calculate the total payment and apply the discount as listed below.\n",
         "\n",
-        "* The customers receive 20% off donuts when they buy 20 or more donuts.\n",
-        "* The customers receive 10% off cupcakes when they buy 10 or more cupcakes.\n",
+        "* Customers receive 20% off on donuts when purchasing 20 or more donuts.\n",
+        "* Customers receive 10% off on donuts when purchasing 10 or more donuts.\n",
         "\n",
         "**Input:**\n",
         "- The number of donut, cupcake, and popcorn.\n",
