--- a/Repetition_Exercise.ipynb
+++ b/Repetition_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNEHqXTJvZuS6vRQeYTRlya",
+      "authorship_tag": "ABX9TyMWBfIJkEINGSSgpZ2w1ug0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,7 +127,10 @@
       "source": [
         "**Q5**: Calculate the average\n",
         "\n",
-        "Write a program to calculate the average of a given list below."
+        "Write a program to calculate the average of a given list below.\n",
+        "\n",
+        "The average is the sum of all numbers in the sequence divided by the total number,\n",
+        "$\\frac{1}{n}\\sum_i^n x_i$, where $x$ is a sequence of $n$ numbers."
       ],
       "metadata": {
         "id": "unNFkKMDvrTq"
@@ -149,11 +152,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q6**: Largest number\n",
+        "**Q6**: Calculate sum from the user's input\n",
         "\n",
         "Write a program that repeatedly prompts a user for integer numbers until the user enters -999999.\n",
         "\n",
-        "Once the loop is stop, print out the largest number.\n",
+        "Once the loop stops, print out the sum of all numbers from the user.\n",
         "\n",
         "Example:\n",
         "```\n",
@@ -161,7 +164,7 @@
         "Enter a number: 3\n",
         "Enter a number: 10\n",
         "Enter a number: -999999\n",
-        "The largest number is 10\n",
+        "The total is 18\n",
         "```"
       ],
       "metadata": {
@@ -170,7 +173,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n"
+      ],
       "metadata": {
         "id": "zQW2KxHYvsG5"
       },
@@ -184,7 +189,7 @@
         "\n",
         "Write a program that take in two numbers $n$ and $m$ from a user. <br> Then print out a sequence of numbers from 1 to $n$ separated by commas. <br> If a number in the sequence is divisible by $m$, print 'D' instead.\n",
         "\n",
-        "Extra: Don't print out any extra comma at the end.\n",
+        "**Extra**: Don't print out any extra comma at the end.\n",
         "\n",
         "\n",
         "Example:\n",
