--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvJdoAJY0Vbe0gYd45hn1g",
+      "authorship_tag": "ABX9TyNSoyQgizztnau/+8G1cXdI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -51,7 +51,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q2**: Fill in the blank so the the program prints out 'Yes', when the user input the number between 12 and 18."
+        "**Q2**: Fill in the blank so the the program prints out 'Yes', when the user input the number between 20 and 30."
       ],
       "metadata": {
         "id": "jPy4hVOgRmb-"
@@ -443,6 +443,8 @@
         "**Q13**: Nim Game (2 points)\n",
         "\n",
         "Write a program to create a Nim game. In this game, there are two players. Each player takes turn to count the number down by 1 or 2. Who count to zero first lose. The starting amount is 10.\n",
+        "\n",
+        "**Hint**: You can determine the turn (first or second player) by checking the turn number. If the turn number is odd, then it's the first player. If thet turn number is even, then it's the second player.\n",
         "\n",
         "Example\n",
         "```\n",
