--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSoyQgizztnau/+8G1cXdI",
+      "authorship_tag": "ABX9TyNVbXepf58j/zl6Lvqk4/2Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -349,7 +349,59 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q11**: Printing up traingle\n",
+        "**Q11** Finding a largest number\n",
+        "\n",
+        "Write a program to find a largest number that the user enters. The program will first ask the user to the number `n` the number of numbers that the user will enter. Afterward, the user will enter `n` numbers. The user will always enter a positive numbers (see examples).\n",
+        "\n",
+        "Example 1:\n",
+        "```\n",
+        "n = 3\n",
+        "1\n",
+        "2\n",
+        "3\n",
+        "3\n",
+        "The largest number is 3\n",
+        "```\n",
+        "Example 2:\n",
+        "```\n",
+        "n = 4\n",
+        "1000\n",
+        "100\n",
+        "10\n",
+        "1\n",
+        "The largest number is 1000\n",
+        "```\n",
+        "Example 3:\n",
+        "```\n",
+        "n = 5\n",
+        "3\n",
+        "999\n",
+        "1234\n",
+        "888\n",
+        "7\n",
+        "The largest number is 1234\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "z6hWdnoxCq4N"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input('n = '))\n",
+        "largest = -1\n"
+      ],
+      "metadata": {
+        "id": "Egv_hj4yCqki"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q12**: Printing up traingle\n",
         "\n",
         "Write a program that takes in an interger number from a user and then print out a traingle shown below.\n",
         "\n",
@@ -388,51 +440,6 @@
       ],
       "metadata": {
         "id": "4zsBV9dWolPw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Q12**: Printing outer traingle\n",
-        "\n",
-        "Write a program that takes in an interger number from a user and then print out an outer traingle shown below.\n",
-        "\n",
-        "Example 1:\n",
-        "```\n",
-        "Enter a number: 1\n",
-        "*\n",
-        "```\n",
-        "Example 2:\n",
-        "```\n",
-        "Enter a number: 2\n",
-        "*\n",
-        " *\n",
-        "```\n",
-        "Example 3:\n",
-        "```\n",
-        "Enter a number: 6\n",
-        "*\n",
-        " *\n",
-        "  *\n",
-        "   *\n",
-        "    *\n",
-        "     *\n",
-        "```"
-      ],
-      "metadata": {
-        "id": "9Xordd-eolZs"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "ZtVyhd_xol9F"
       },
       "execution_count": null,
       "outputs": []
