--- a/Project_Tic_Tac_Toe.ipynb
+++ b/Project_Tic_Tac_Toe.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZnkHFgk0b4rHo4uAwsPDh",
+      "authorship_tag": "ABX9TyOn/jT9tp/Tigmsc3wpaNcE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,7 +115,9 @@
         "- row and column are between 0 and 2.\n",
         "- The location is empty.\n",
         "\n",
-        "If the user's input is invalid, print out `Your input is invalid` and ask the user to input a new move. Consider implement this function without any validation check first.\n",
+        "If the user's input is invalid, print out `Your input is invalid` and ask the user to input a new move.\n",
+        "\n",
+        "**Consider implement this function without any validation check first.**\n",
         "\n",
         "**Recommendations**\n",
         "- Implement and test each function one by one.\n",
