--- a/List_Exercise.ipynb
+++ b/List_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeYB7zzbqT7LPsrgPPNBXN",
+      "authorship_tag": "ABX9TyN2XCr1DEGWe+CIH83fzfpo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -122,7 +122,7 @@
       "source": [
         "board = [['A','B','C'],['D','E','F'],['G','H','I']]\n",
         "\n",
-        "print(board[_][_], boar[_][_])"
+        "print(board[_][_], board[_][_])"
       ],
       "metadata": {
         "id": "XF6ORJwMjQcH"
@@ -178,8 +178,11 @@
         "# test_list = [2,2,2]\n",
         "# test_list = [1, 2, 3, 4, 5]\n",
         "\n",
+        "new_list = []\n",
         "# Fill in your code here. Your code must use test_list\n",
-        "\n"
+        "\n",
+        "\n",
+        "print(new_list)"
       ],
       "metadata": {
         "id": "o0I8hGiTjSbK"
