--- a/String_and_Dict_Exercise.ipynb
+++ b/String_and_Dict_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN1VSUippuLXxguIsnQINwC",
+      "authorship_tag": "ABX9TyOo8EILXrqoi1H398KUtMvZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,7 +121,7 @@
         "\n",
         "Implement a program to determine whether or not the input from the user starts with 'www' or not.\n",
         "\n",
-        "For this question, try to use slicing and `len` to do it.\n",
+        "For this question, try to use slicing (and `len` if necessary) to do it.\n",
         "\n",
         "Example 1:\n",
         "```\n",
@@ -227,7 +227,6 @@
       "source": [
         "my_dict = {}\n",
         "# Fill in your code here\n",
-        "\n",
         "\n",
         "\n",
         "\n",
