--- a/Condition_Exercise.ipynb
+++ b/Condition_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoMJUpP6qlPJN+H8IBwKnU",
+      "authorship_tag": "ABX9TyOaN6SK7pNa3Anfj3xaY549",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -222,7 +222,7 @@
         "Write a program that takes in the number of products that a customer buys. <br> There are three products: donut, cupcake, and popcorn. <br> The price of donut is 10 baht each; the price of cupcake is 20 baht each; and the price of popcorn is 40 baht each. <br> Calculate the total payment and apply the discount as listed below.\n",
         "\n",
         "* Customers receive 20% off on donuts when purchasing 20 or more donuts.\n",
-        "* Customers receive 10% off on donuts when purchasing 10 or more donuts.\n",
+        "* Customers receive 10% off on cupcake when purchasing 10 or more cupcakes.\n",
         "\n",
         "**Input:**\n",
         "- The number of donut, cupcake, and popcorn.\n",
