--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVbXepf58j/zl6Lvqk4/2Y",
+      "authorship_tag": "ABX9TyNTTVr90JKy8N4TP+rLg5Yd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -390,7 +390,7 @@
       "cell_type": "code",
       "source": [
         "n = int(input('n = '))\n",
-        "largest = -1\n"
+        "largest = -1  # Use this to maintain the largest number so far\n"
       ],
       "metadata": {
         "id": "Egv_hj4yCqki"
@@ -447,7 +447,48 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Q13**: Nim Game (2 points)\n",
+        "**Q13**: Calculate variance\n",
+        "\n",
+        "You are given a list of numbers. Your task is to calculate the variance of the list using the following formula\n",
+        "\n",
+        "$var = \\frac{1}{n}\\sum_i^nx_i^2 - \\mu^2$, where $x$ is the list of numbers, $n$ is the length of the list, and $\\mu$ is the mean of the list, $\\mu = \\frac{\\sum_i^nx_i}{n}$.\n",
+        "\n",
+        "**Hint:** separate the calculation into two parts (two loops)"
+      ],
+      "metadata": {
+        "id": "IWXuPB5h88TC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# simply use these test_list below to test use your code\n",
+        "# Comment out to test other lists\n",
+        "test_list = [1,2,3,4,5]           # The answer is 2\n",
+        "# test_list = [1,1,1,1,1]           # The answer is 0\n",
+        "# test_list = [9,1,4,12,0,-2,4,8]   # The answer is 20.5\n",
+        "\n",
+        "# Your code below\n"
+      ],
+      "metadata": {
+        "id": "3e1cRgzV88l0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Nx_lcSWe90ON"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Q14**: Nim Game\n",
         "\n",
         "Write a program to create a Nim game. In this game, there are two players. Each player takes turn to count the number down by 1 or 2. Who count to zero first lose. The starting amount is 10.\n",
         "\n",
