--- a/Repetition_Exercise.ipynb
+++ b/Repetition_Exercise.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMWBfIJkEINGSSgpZ2w1ug0",
+      "authorship_tag": "ABX9TyPDWncB3hFEktui41mE3R7i",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -140,7 +140,7 @@
       "cell_type": "code",
       "source": [
         "data = [10,20,31,23,54,71,19,32,29]  # the mean should be 32.11...\n",
-        "length = 9                           # You can get this using len(data) but we will talk about it tomorrow.\n",
+        "n = len(data)                        # len() is a function to determine the length of the list. We will talk about this tomorrow.\n",
         "# Fill in your code here\n"
       ],
       "metadata": {
@@ -188,6 +188,9 @@
         "**Q7**: Divisible sequence\n",
         "\n",
         "Write a program that take in two numbers $n$ and $m$ from a user. <br> Then print out a sequence of numbers from 1 to $n$ separated by commas. <br> If a number in the sequence is divisible by $m$, print 'D' instead.\n",
+        "\n",
+        "**Note**:\n",
+        "- Use `print(num, end=',')` to print that ends with `,` instead of a new line.\n",
         "\n",
         "**Extra**: Don't print out any extra comma at the end.\n",
         "\n",
