--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPKtCuG7iFEI3/w7IpW9i5",
+      "authorship_tag": "ABX9TyMnwqlChNbAPUSzAsw9khiT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -467,6 +467,8 @@
         "test_list = [1,2,3,4,5]           # The answer is 2\n",
         "# test_list = [1,1,1,1,1]           # The answer is 0\n",
         "# test_list = [9,1,4,12,0,-2,4,8]   # The answer is 20.5\n",
+        "\n",
+        "n = len(test_list)\n",
         "\n",
         "# Your code below\n"
       ],
